--- a/Assets/UI/MainMenu.uxml
+++ b/Assets/UI/MainMenu.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Styles.uss?fileID=7433441132597879392&amp;guid=7cca3c078dda7034fac5d4265e52c197&amp;type=3#Styles" />
-    <ui:VisualElement name="contenedor" class="contenedor" style="flex-grow: 1; background-color: rgba(32, 32, 32, 0); background-image: url(&apos;project://database/Assets/Environment/Sprites/Clouds/Sprite_Cloud_2.png?fileID=2800000&amp;guid=9fb925f0dc7934c45865efb05a386098&amp;type=3#Sprite_Cloud_2&apos;);">
-        <ui:VisualElement name="izquierda" class="izquierda" style="flex-grow: 1; -unity-background-scale-mode: stretch-to-fill; -unity-background-image-tint-color: rgb(255, 255, 255); max-width: 500px; min-width: 300px; background-color: rgba(46, 46, 46, 0.58);">
-            <ui:VisualElement name="logo" class="logo" style="flex-grow: 1;" />
-            <ui:VisualElement name="buttons" class="buttons" style="flex-grow: 1; margin-top: 90px;">
+    <ui:VisualElement name="contenedor" class="contenedor" style="flex-grow: 1; background-color: rgba(32, 32, 32, 0); background-image: url(&apos;project://database/Assets/Art/UI/background.jpeg?fileID=2800000&amp;guid=94791ac079bb0714d9af5687ec5bc596&amp;type=3#background&apos;);">
+        <ui:VisualElement name="izquierda" class="izquierda" style="flex-grow: 1; -unity-background-scale-mode: stretch-to-fill; -unity-background-image-tint-color: rgb(255, 255, 255); max-width: 500px; min-width: 300px; background-color: rgba(46, 46, 46, 0.04);">
+            <ui:VisualElement name="logo" class="logo" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/UI/Title_Text_green.png?fileID=21300000&amp;guid=42e1c3038b5929c409d66e5fb6471d45&amp;type=3#Title_Text_green&apos;); -unity-background-scale-mode: scale-to-fit; width: 75%; height: 20%; margin-top: 100px;" />
+            <ui:VisualElement name="buttons" class="buttons" style="flex-grow: 1; margin-top: 30px;">
                 <ui:Button text="PLAY" parse-escape-sequences="true" display-tooltip-when-elided="true" name="play" class="buttonNormal" />
                 <ui:Button text="CONTROLS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="controls" class="buttonNormal" />
                 <ui:Button text="OPTIONS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="options" class="buttonNormal" />
@@ -13,6 +13,18 @@
                 <ui:Label tabindex="-1" text="Dark Tombs Studios 2023" parse-escape-sequences="true" display-tooltip-when-elided="true" name="label" />
             </ui:VisualElement>
         </ui:VisualElement>
-        <ui:VisualElement name="derecha" class="derecha" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/UI/controles.png?fileID=2800000&amp;guid=213cc9d791f83bd47b19b07f3c535549&amp;type=3#controles&apos;);" />
+        <ui:VisualElement name="menusbuttons" style="flex-grow: 1; flex-direction: row; flex-wrap: nowrap; flex-shrink: 1; height: 100%; width: auto;">
+            <ui:VisualElement name="controlsmenu" class="derecha" style="flex-grow: 0; background-image: url(&apos;project://database/Assets/Art/UI/controles.png?fileID=2800000&amp;guid=213cc9d791f83bd47b19b07f3c535549&amp;type=3#controles&apos;); height: initial; flex-basis: 100%; flex-shrink: 0;">
+                <ui:Button text="BACK" parse-escape-sequences="true" display-tooltip-when-elided="true" name="backbutton1" class="buttonback" style="left: 450px; top: 75px; -unity-font-style: bold;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="optionsmenu" class="derecha" style="flex-grow: 0; background-image: none; height: initial; flex-basis: 100%; flex-shrink: 0; background-color: rgba(0, 0, 0, 0.39); align-items: stretch; align-self: auto;">
+                <ui:Button text="BACK" parse-escape-sequences="true" display-tooltip-when-elided="true" name="backbutton2" class="buttonback" style="left: 450px; top: 75px; -unity-font-style: bold;" />
+                <ui:Slider picking-mode="Ignore" label="VOLUME" value="42" high-value="100" name="volumenSlider" style="top: 200px; margin-top: 5px; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; width: 400px; left: 0; align-self: center; color: rgb(255, 255, 255); -unity-font-style: bold; font-size: 22px;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="creditsmenu" class="derecha" style="flex-grow: 0; background-image: none; height: initial; flex-basis: 100%; flex-shrink: 0; flex-direction: column; justify-content: flex-start; background-color: rgba(0, 0, 0, 0.24);">
+                <ui:Label tabindex="-1" text="Isabel Mejia&#10;Luna Duran&#10;J. Esteban Rodriguez&#10;Laura Diaz" parse-escape-sequences="true" display-tooltip-when-elided="true" style="flex-direction: column; top: 300px; align-self: center; -unity-font-style: bold; -unity-text-align: upper-center; color: rgb(255, 255, 255); font-size: 30px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0;" />
+                <ui:Button text="BACK" parse-escape-sequences="true" display-tooltip-when-elided="true" name="backbutton3" class="buttonback" style="left: 450px; top: 50px; -unity-font-style: bold;" />
+            </ui:VisualElement>
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
