--- a/Assets/UI/MainMenu.uxml
+++ b/Assets/UI/MainMenu.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Styles.uss?fileID=7433441132597879392&amp;guid=7cca3c078dda7034fac5d4265e52c197&amp;type=3#Styles" />
-    <ui:VisualElement name="contenedor" class="contenedor" style="flex-grow: 1; background-color: rgba(32, 32, 32, 0); background-image: url(&apos;project://database/Assets/Art/UI/background.jpeg?fileID=2800000&amp;guid=94791ac079bb0714d9af5687ec5bc596&amp;type=3#background&apos;);">
+    <ui:VisualElement name="contenedor" class="contenedor" style="flex-grow: 1; background-color: rgba(32, 32, 32, 0); background-image: none;">
         <ui:VisualElement name="izquierda" class="izquierda" style="flex-grow: 1; -unity-background-scale-mode: stretch-to-fill; -unity-background-image-tint-color: rgb(255, 255, 255); max-width: 500px; min-width: 300px; background-color: rgba(46, 46, 46, 0.04);">
             <ui:VisualElement name="logo" class="logo" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/UI/Title_Text_green.png?fileID=21300000&amp;guid=42e1c3038b5929c409d66e5fb6471d45&amp;type=3#Title_Text_green&apos;); -unity-background-scale-mode: scale-to-fit; width: 75%; height: 20%; margin-top: 100px;" />
             <ui:VisualElement name="buttons" class="buttons" style="flex-grow: 1; margin-top: 30px;">
